Add Lukas and Jonas to the credits page.

--- a/doc/pages/credits.dox
+++ b/doc/pages/credits.dox
@@ -18,7 +18,12 @@ Andrea Helfenstein - https://github.com/helandre
 		- Declarative API for defining visualizations and supporting documentation
 
 <br>
+Jonas Trappenberg - https://github.com/teeberg
+		- Comments and Diagrams infrastructure
+
+<br>
 Lukas Vogel - https://github.com/lukedirtwalker
+		- C++ import plug-in
 		- Enhancements to the object-oriented model
 
 \section special Special Thanks
