--- a/doc/pages/credits.dox
+++ b/doc/pages/credits.dox
@@ -14,6 +14,10 @@ Dimitar Asenov - https://github.com/dimitar-asenov
 		- Documentation
 
 <br>
+Sascha Dinkel - https://github.com/Sashixi
+		- Improvements to comments and diagrams
+
+<br>
 Andrea Helfenstein - https://github.com/helandre
 		- Declarative API for defining visualizations and supporting documentation
 
